# pam_skey

./: .travis.yml  ChangeLog  INSTALL  Makefile.in  README  README.md  RELEASENOTES  TODO  configure  defs.h.in  misc.h.in  pam_skey.c  pam_skey.h  pam_skey_access.c
CVS/: Entries  Repository
autoconf/: acconfig.h  configure.in
autoconf/CVS/: Entries  Repository  Root
contrib/: README  linux-skey-wuftpd.patch  netmatch.patch  norb.patch  pam_skey.c
contrib/CVS/: Entries  Repository
libskey/: DISCLAIMER  Makefile  README  README.WZV  key.1  keyinfo-  keyinfo.1-  keyinfo.SH  keyinit.1-  keyinit.1.SH  keyprint  keyprint-  mdx.c  mdx.h  put.c  skey.access  skey.access.5.SH  skey.c  skey.c-  skey.h  skey.h-  skey_getpass.c  skeyaccess.c  skeyinit.c  skeyinit.c-  skeylogin.c  skeylogin.c-  skeysubr.c  skeysubr.c-  winkey
sample/: pam.conf
sample/CVS/: Entries  Repository
sample/DEBIAN/: conffiles  control  postinst  prerm
sample/DEBIAN/CVS/: Entries  Repository
